wip: controllers are running, and now multiport mesh init is stuck, with workloads not being synced to consul and error logs from endpoints v2 controller * explicitly specify dataplane tenancy (needed from manual testing) * connect inject deployment was missing a \ to complete the command * server statefulset was also missing a \ so v2 mode wasn't being turned on.
Co-authored-by: Dan Stough <dan.stough@hashicorp.com>
Co-authored-by: Michael Wilkerson <mwilkerson@hashicorp.com>
Co-authored-by: John Murret <john.murret@hashicorp.com>
Co-authored-by: Michael Zalimeni <michael.zalimeni@hashicorp.com>

--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -152,7 +152,7 @@ spec:
                 -resource-prefix={{ template "consul.fullname" . }} \
                 -listen=:8080 \
                 {{- if (mustHas "resource-apis" .Values.global.experiments) }}
-                -enable-resource-apis=true
+                -enable-resource-apis=true \
                 {{- end }}
                 {{- range $k, $v := .Values.connectInject.consulNode.meta }}
                 -node-meta={{ $k }}={{ $v }} \
