--- a/acceptance/tests/fixtures/bases/v2-multiport-app/deployment.yaml
+++ b/acceptance/tests/fixtures/bases/v2-multiport-app/deployment.yaml
@@ -31,18 +31,18 @@ spec:
           ports:
             - containerPort: 8080
               name: web
-          livenessProbe:
-            httpGet:
-              port: 8080
-            initialDelaySeconds: 1
-            failureThreshold: 1
-            periodSeconds: 1
-          startupProbe:
-            httpGet:
-              port: 8080
-            initialDelaySeconds: 1
-            failureThreshold: 30
-            periodSeconds: 1
+#          livenessProbe:
+#            httpGet:
+#              port: 8080
+#            initialDelaySeconds: 1
+#            failureThreshold: 1
+#            periodSeconds: 1
+#          startupProbe:
+#            httpGet:
+#              port: 8080
+#            initialDelaySeconds: 1
+#            failureThreshold: 30
+#            periodSeconds: 1
           readinessProbe:
             exec:
               command: ['sh', '-c', 'test ! -f /tmp/unhealthy-multiport']
@@ -57,18 +57,18 @@ spec:
           ports:
             - containerPort: 9090
               name: admin
-          livenessProbe:
-            httpGet:
-              port: 9090
-            initialDelaySeconds: 1
-            failureThreshold: 1
-            periodSeconds: 1
-          startupProbe:
-            httpGet:
-              port: 9090
-            initialDelaySeconds: 1
-            failureThreshold: 30
-            periodSeconds: 1
+#          livenessProbe:
+#            httpGet:
+#              port: 9090
+#            initialDelaySeconds: 1
+#            failureThreshold: 1
+#            periodSeconds: 1
+#          startupProbe:
+#            httpGet:
+#              port: 9090
+#            initialDelaySeconds: 1
+#            failureThreshold: 30
+#            periodSeconds: 1
           readinessProbe:
             exec:
               command: ['sh', '-c', 'test ! -f /tmp/unhealthy-multiport-admin']
